# imessage-exporter

./: .gitignore  Cargo.toml  README.md  build.sh  imessage-exporter.rb
.github/workflows/: test.yml
docs/: README.md  chat.md  faq.md  features.md  handle.md  messages_structure.md
docs/binary/: README.md  features.md
docs/tables/: attachment.md  duplicates.md  messages.md
imessage-database/: Cargo.toml  README.md
imessage-database/src/: lib.rs
imessage-database/src/error/: attachment.rs  message.rs  mod.rs  plist.rs  query_context.rs  streamtyped.rs  table.rs
imessage-database/src/message/: applepay.rs  mod.rs  reactions.rs  variants.rs
imessage-database/src/message_types/: app.rs  app_store.rs  applepay.rs  collaboration.rs  edited.rs  expressives.rs  handwriting.rs  mod.rs  music.rs  placemark.rs  reactions.rs  shared_placemark.rs  sticker.rs  unknown.rs  url.rs  variants.rs
imessage-database/src/tables/: attachment.rs  chat.rs  chat_handle.rs  handle.rs  join.rs  messages.rs  mod.rs  table.rs
imessage-database/src/util/: dates.rs  dirs.rs  export_type.rs  message_types.rs  mod.rs  output.rs  platform.rs  plist.rs  query_context.rs  size.rs  streamtyped.rs
imessage-database/test_data/: AppleMusic.plist  Business.plist  Game.plist  OpenTableInvited.plist  Reminder.plist  Slideshow.plist  URL.plist
imessage-database/test_data/app_message/: ApplePayRecurring.plist  CheckinEnded.plist  CheckinLate.plist  CheckinLocation.plist  CheckinTimer.plist  FindMy.plist  Sent265.plist
imessage-database/test_data/app_store/: AppStoreLink.plist
imessage-database/test_data/collaboration_message/: Freeform.plist
imessage-database/test_data/edited_message/: Deleted.plist  Edited.plist  EditedToLink.plist  EditedToLinkAndBack.plist
imessage-database/test_data/shared_placemark/: SharedPlacemark.plist
imessage-database/test_data/stickers/: comic.heic  no_effect.heic  outline.heic  puffy.heic  shiny.heic
imessage-database/test_data/streamtyped/: AttributedBodyTextOnly  AttributedBodyTextOnly2  Blank  ExtraData  MultiPart  URL  WeirdText
imessage-database/test_data/url_message/: MetadataURL.plist  Twitter.plist
imessage-exporter/: Cargo.toml  README.md
imessage-exporter/src/: main.rs
imessage-exporter/src/app/: attachment_manager.rs  converter.rs  error.rs  export_type.rs  mod.rs  options.rs  progress.rs  runtime.rs  sanitizers.rs
imessage-exporter/src/exporter/: exporter.rs  mod.rs  txt.rs
imessage-exporter/src/exporters/: exporter.rs  html.rs  mod.rs  pdf.rs  txt.rs
imessage-exporter/src/exporters/resources/: example.html  style.css
src/: main.rs
src/tables/: attachment.rs  chat.rs  handle.rs  join.rs  messages.rs  mod.rs  table.rs
src/util/: dates.rs  dirs.rs  mod.rs  options.rs  output.rs  runtime.rs
