[package]
authors = ["Christopher Sardegna <imessage@reagentx.net>"]
categories = ["database"]
description = "Parsers and tools to interact with iMessage SQLite data"
edition = "2021"
exclude = [".github", "docs", "build.sh"]
license = "GPL-3.0-or-later"
name = "imessage-database"
repository = "https://github.com/ReagentX/imessage-exporter"
version = "0.0.0"

[dependencies]
chrono = "0.4.23"
plist = "1.3.1"
rusqlite = {version = "0.28.0", features = ["blob", "bundled"]}
