[package]
authors = ["Christopher Sardegna <imessage@reagentx.net>"]
categories = ["database"]
description = "Parsers and tools to interact with iMessage SQLite data"
edition = "2021"
exclude = [".github", "docs", "build.sh"]
license = "GPL-3.0-or-later"
name = "imessage-database"
repository = "https://github.com/ReagentX/imessage-exporter"
version = "0.0.0"

[dependencies]
chrono = "0.4.31"
plist = "1.6.0"
rusqlite = { version = "0.30.0", features = ["blob", "bundled"] }
sha1 = "0.10.6"
