[package]
authors = ["Christopher Sardegna <imessage@reagentx.net>"]
categories = ["command-line-utilities"]
description = "Export iMessage data and run iMessage diagnostics"
edition = "2021"
exclude = [".github", "docs", "build.sh"]
license = "GPL-3.0-or-later"
name = "imessage-exporter"
repository = "https://github.com/ReagentX/imessage-exporter"
version = "0.0.0"

[dependencies]
clap = {version = "3.2.22", features = ["cargo"]}
imessage-database = {path = "../imessage-database"}
indicatif = "0.17.1"
rusqlite = {version = "0.28.0", features = ["blob"]}
uuid = {version = "1.1.2", features = ["v4", "fast-rng"]}
