[package]
authors = ["Christopher Sardegna <imessage@reagentx.net>"]
categories = ["command-line-utilities"]
description = "Export iMessage data and run iMessage diagnostics"
edition = "2021"
exclude = [".github", "docs", "build.sh"]
license = "GPL-3.0-or-later"
name = "imessage-exporter"
repository = "https://github.com/ReagentX/imessage-exporter"
version = "0.0.0"

[dependencies]
clap = {version = "3.2.23", features = ["cargo"]}
filetime = "0.2.21"
imessage-database = {path = "../imessage-database"}
indicatif = "0.17.7"
rusqlite = {version = "0.30.0", features = ["blob", "bundled"]}
uuid = {version = "1.5.0", features = ["v4", "fast-rng"]}
